--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,6 +107,7 @@
             </LinearLayout>
             
             <Button
+                android:id="@+id/btnlogin"
                 android:layout_below="@+id/linelay1"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
@@ -120,8 +121,10 @@
                 android:paddingRight="70dp"
                 android:layout_centerHorizontal="true"
                 android:textSize="16sp"
-
                 />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
 
         </RelativeLayout>
