--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -49,6 +49,7 @@
                         android:textAllCaps="true"
                         android:textColor="@color/whitw"/>
                     <EditText
+                        android:id="@+id/fullname"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:background="@drawable/et_bg"
@@ -75,6 +76,7 @@
                         android:textAllCaps="true"
                         android:textColor="@color/whitw"/>
                     <EditText
+                        android:id="@+id/email"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:background="@drawable/et_bg"
@@ -83,7 +85,8 @@
                         android:fontFamily="sans-serif-light"
                         android:paddingLeft="15dp"
                         android:paddingRight="15dp"
-                        android:layout_marginTop="5dp"/>
+                        android:layout_marginTop="5dp"
+                        android:inputType="textEmailAddress"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -101,6 +104,7 @@
                         android:textAllCaps="true"
                         android:textColor="@color/whitw"/>
                     <EditText
+                        android:id="@+id/username"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:background="@drawable/et_bg"
@@ -127,6 +131,7 @@
                         android:textAllCaps="true"
                         android:textColor="@color/whitw"/>
                     <EditText
+                        android:id="@+id/password"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:background="@drawable/et_bg"
@@ -135,7 +140,8 @@
                         android:fontFamily="sans-serif-light"
                         android:paddingLeft="15dp"
                         android:paddingRight="15dp"
-                        android:layout_marginTop="5dp"/>
+                        android:layout_marginTop="5dp"
+                        android:inputType="textPassword"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -204,6 +210,7 @@
                 </LinearLayout>
 
                 <Button
+                    android:id="@+id/btn_signup"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/btn_bg"
