--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -181,18 +181,22 @@
                         android:layout_marginRight="50dp"
                         />
                     <RadioGroup
+                        android:id="@+id/active"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
                         <RadioButton
+                            android:id="@+id/rb1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text=" Yes"
                             android:textColor="@color/whitw"
                             android:textSize="15sp"
                             android:fontFamily="sans-serif-light"
-                            android:layout_marginRight="20dp"/>
+                            android:layout_marginRight="20dp"
+                            android:checked="true"/>
                         <RadioButton
+                            android:id="@+id/rb2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text=" No"
