--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -54,26 +54,12 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
-            <ImageView
+            <TextView
+            android:id="@+id/hasilLogin"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/icon_twitter"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-            />
-            <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/icon_twitter"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-            />
-            <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/icon_twitter"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
+            android:textColor="@color/whitw"
+            android:textSize="15sp"
             />
         </LinearLayout>
 
@@ -92,6 +78,7 @@
             android:textColor="@color/whitw"
             android:fontFamily="sans-serif-light"
             android:layout_marginTop="110dp"
+            android:padding="8dp"
             />
 
 
