--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -6,12 +6,65 @@
     android:layout_height="match_parent"
     tools:context=".activity.BookActivity"
     android:background="@drawable/grad_bg">
-
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </FrameLayout>
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fab"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="30dp"
+        android:layout_marginRight="20dp"
+        app:fab_addButtonColorPressed="#00BCD4"
+        app:fabSize="normal"
+        app:elevation="6dp"
+        app:fab_labelStyle="@style/costumFab">
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="#00BCD4"
+            app:fab_size="normal"
+            app:fab_icon="@drawable/ic_add"
+            android:id="@+id/fabHome"
+            app:fab_title="Home"
+            />
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="#27B616"
+            app:fab_size="mini"
+            app:fab_icon="@drawable/ic_add"
+            android:id="@+id/fabAdd"
+            app:fab_title="Add Data"
+            />
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="#0F5FE8"
+            app:fab_size="mini"
+            app:fab_icon="@drawable/ic_edit"
+            android:id="@+id/fabEdit"
+            app:fab_title="Edit Data"
+            />
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="#B81414"
+            app:fab_size="mini"
+            app:fab_icon="@drawable/ic_delete"
+            android:id="@+id/fabDelete"
+            app:fab_title="Delete Data"
+            />
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
 
 </RelativeLayout>
