--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,5 +8,9 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="costumFab">
+        <item name="android:background">@drawable/fab_label_bg</item>
+        <item name="android:textColor">@color/whitw</item>
+    </style>
 
 </resources>
