mengedit tahun yang ketuker dan menambah panggil fragment ketika add

--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.BookActivity"
-    android:background="@drawable/grad_bg">
+    android:background="@drawable/grad_bg"
+    android:id="@+id/bookLayout">
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
